--- a/src/webapp/fluid-components/css/fluid.theme.hc.css
+++ b/src/webapp/fluid-components/css/fluid.theme.hc.css
@@ -68,6 +68,31 @@
 .fl-theme-hc .fl-grid li {}
 .fl-theme-hc .fl-grid .caption {}
 
+
+/* Widget core */
+.fl-theme-hc .fl-widget {background-color:#000; border:1px solid #fff;}
+    .fl-theme-hc .fl-widget ul {}
+    .fl-theme-hc .fl-widget h2 {color:#fff;}
+    .fl-theme-hc .fl-widget a {color:#000;}
+    .fl-theme-hc .fl-widget .icon {color:#000; background-image:none; background-color:#fff; text-indent:0; width:auto; height:auto; margin-left:0px; padding:0 2px; display:inline; font-weight:bold;}
+        
+/* Widget titlebar */
+.fl-theme-hc .fl-widget .fl-widget-titlebar {margin-bottom:3px;}
+
+/* Widget options */
+.fl-theme-hc .fl-widget .fl-widget-options {padding:0px;}
+    .fl-theme-hc .fl-widget .fl-widget-options ul {} 
+    .fl-theme-hc .fl-widget .fl-widget-options li {border-left:1px solid #fff;}
+    .fl-theme-hc .fl-widget .fl-widget-options a {color:#fff;}
+    .fl-theme-hc .fl-widget .fl-widget-options .icon {}
+    .fl-theme-hc .fl-widget .fl-widget-options .viewOptions {}
+    .fl-theme-hc .fl-widget .fl-widget-options .toggle {}
+    
+/* Widget content */
+.fl-theme-hc .fl-widget .fl-widget-content {background-color:#fff;}
+
+
+
 /* Component: Progressor */
 .fl-theme-hc .fl-progress-bounds {border-color:#000; background-color:#fff;}
 .fl-theme-hc .fl-progress-fill {color:#fff; background-color:#000;}
