--- a/src/webapp/fluid-components/css/fluid.theme.mist.css
+++ b/src/webapp/fluid-components/css/fluid.theme.mist.css
@@ -67,7 +67,7 @@
    outline: 0.1em solid #F00;
 }
 
-.fl-theme-mist {color:#000000 !important; background-color:#ffffff !important; border-color:#4070a1;}
+.fl-theme-mist {color:#000000 !important; background-color:#f4f4f4 !important; border-color:#4070a1;}
 .fl-theme-mist a {color: #5a95cf !important; font-weight:bold;}
 .fl-theme-mist a:hover {color: #6DB5FB !important;}
 .fl-theme-mist h1 {color:#4070a1; border-bottom-width:0.2em; border-bottom-style:solid;} 
@@ -93,7 +93,7 @@
 .fl-theme-mist .fl-tabs li.fl-activeTab:hover,
 .fl-theme-mist .fl-tabs li.fl-activeTab a,
 .fl-theme-mist .fl-tabs li.fl-activeTab a:hover {background-color: #fff; border-bottom-color:#fff; color:#508cc9 !important;}
-.fl-theme-mist .fl-tab-content {background-color:#ffffff; color:#000;}
+.fl-theme-mist .fl-tab-content {background-color:#ffffff; color:#000; border:1px solid #4070a1; border-top:none;}
 
 /* Helper: Menu */
 .fl-theme-mist .fl-listmenu {border:1px solid #4070a1; background-color:#fff;}
@@ -108,12 +108,34 @@
 .fl-theme-mist .fl-grid li {background-color:#dfefff; border:1px solid #4070a1}
 .fl-theme-mist .fl-grid .caption {background-color:#dfefff; color:#5a95cf; }
 
+/* Helper: Widgets */
+/* Widget core */
+.fl-theme-mist .fl-widget {background:#efefef url(FSS_images/themes/mist/widget-bg.png) repeat-x top left; border:1px solid #CCCCCC;}
+    .fl-theme-mist .fl-widget ul {}
+    .fl-theme-mist .fl-widget h2 {color:#000;}
+    .fl-theme-mist .grabbable {background-image:url('FSS_images/themes/mist/gripper.png');}
+
+/* Widget titlebar */
+.fl-theme-mist .fl-widget-titlebar {/*margin:-5px -5px 0 -5px;*/}
+    .fl-theme-mist .fl-widget-titlebar .icon {background-position:center center;}
+
+/* Widget options */
+.fl-theme-mist .fl-widget-options {}
+    .fl-theme-mist .fl-widget-options ul {} 
+    .fl-theme-mist .fl-widget-options li {border-left:1px solid #ccc;}
+    .fl-theme-mist .fl-widget-options a {}
+    .fl-theme-mist .fl-widget-options a.icon:hover {background-color:#5a95cf; border-color:#000;}
+
+/* Widget content */
+.fl-theme-mist .fl-widget-content {background-color:#fff;}
+
+
+
 /* Component: Progressor */
 .fl-theme-mist .fl-progress-bounds {border-color:#999999; background-color:#fff;}
 .fl-theme-mist .fl-progress-fill {color:#4070a1; background-color:#000;}
 
 /* Component: Uploader */
-
 
 /* States */
 .fl-theme-mist .orderable-drop-marker {background-color:#f00 !important;}
